force-app/main/default/objects/Contract_Assignment__c/Contract_Assignment__c.object-meta.xml
<CustomObject>
    <label>Contract Assignment</label>
    <nameField>
        <displayFormat>CA-{00000}</displayFormat>
        <label>Contract Assignment No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contract Assignments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>