force-app/main/default/objects/Contract_Assignment__c/fields/Contract_Status__c.field-meta.xml
<CustomField>
    <fullName>Contract_Status__c</fullName>
    <formula>Contract__r.Contract_Active__c</formula>
    <label>Contract Status</label>
    <type>Checkbox</type>
</CustomField>