force-app/main/default/objects/Contract_Assignment__c/fields/Unit__c.field-meta.xml
<CustomField>
    <fullName>Unit__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Unit</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 OR 2</booleanFilter>
        <filterItems>
            <field>Unit__c.Contract_New__c</field>
            <operation>equals</operation>
            <valueField>$Source.Contract__c</valueField>
        </filterItems>
        <filterItems>
            <field>Unit__c.Contract_New__c</field>
            <operation>equals</operation>
            <value></value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Unit__c</referenceTo>
    <relationshipLabel>Contract Assignments</relationshipLabel>
    <relationshipName>Contract_Assignments</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>