force-app/main/default/objects/Contract_Assignment__c/fields/Unit_Type__c.field-meta.xml
<CustomField>
    <fullName>Unit_Type__c</fullName>
    <formula>TEXT(Unit__r.Unit_Type__c)</formula>
    <label>Unit Type</label>
    <type>Text</type>
</CustomField>