force-app/main/default/objects/Contract_Assignment__c/fields/UnitType__c.field-meta.xml
<CustomField>
    <fullName>UnitType__c</fullName>
    <label>UnitType</label>
    <length>255</length>
    <type>Text</type>
</CustomField>