force-app/main/default/objects/Contract_Assignment__c/validationRules/Cannot_Add_Contract_Assignments.validationRule-meta.xml
<ValidationRule>
    <fullName>Cannot_Add_Contract_Assignments</fullName>
    <active>true</active>
    <description>Cannot Add Contract Assignments if Unauthorized Profile</description>
    <errorConditionFormula>AND(
$Profile.Name  &lt;&gt; &apos;System Administrator&apos;,
$Profile.Name  &lt;&gt; &apos;SA3&apos;,
$Profile.Name  &lt;&gt; &apos;Supervisory&apos;,
$Profile.Name  &lt;&gt; &apos;Ops Manager -Rig&apos;,
$Profile.Name  &lt;&gt; &apos;WD - Finance&apos;,
$Profile.Name  &lt;&gt; &apos;Ops Manager -Rig (New)&apos;,
$Profile.Name  &lt;&gt; &apos;Ops Supervisor&apos;,
$Profile.Name  &lt;&gt; &apos;Supervisory 2.0&apos;
)</errorConditionFormula>
    <errorMessage>You are not authorized to add/edit Contract Assignments. Kindly, contact your Operations Manager for same.</errorMessage>
</ValidationRule>