force-app/main/default/objects/Contract_Assignment__c/validationRules/Cannot_change_unit_once_assigned.validationRule-meta.xml
<ValidationRule>
    <fullName>Cannot_change_unit_once_assigned</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
NOT(ISNEW()),
ISCHANGED( Unit__c )
)</errorConditionFormula>
    <errorDisplayField>Unit__c</errorDisplayField>
    <errorMessage>Cannot change unit on existing Contract Assignment. If required, deactivate the current one and create a new one.</errorMessage>
</ValidationRule>