force-app/main/default/objects/Contract_Assignment__c/validationRules/Cannot_Create_Edit_Job_Asg_if_Activated.validationRule-meta.xml
<ValidationRule>
    <fullName>Cannot_Create_Edit_Job_Asg_if_Activated</fullName>
    <active>false</active>
    <description>This rule prevents a User from creating or editing Contract Assignement if Status is Activated</description>
    <errorConditionFormula>OR(
ISPICKVAL( Contract__r.Status__c , &quot;Activated&quot;), 
ISPICKVAL( Contract__r.Status__c , &quot;In Approval Process&quot;),
ISPICKVAL( Contract__r.Status__c , &quot;Changed After Initial Approval&quot;)
)</errorConditionFormula>
    <errorMessage>Contract Assignment cannot be created or edited if the Contract Status is In Approval Process or Activated/Changed After Initial Approval. Please, Contact your Ops-Manager.</errorMessage>
</ValidationRule>