force-app/main/default/objects/Contract_Assignment__c/validationRules/Cant_Add_Job_Asgs_For_Inactive_Contract.validationRule-meta.xml
<ValidationRule>
    <fullName>Cant_Add_Job_Asgs_For_Inactive_Contract</fullName>
    <active>true</active>
    <errorConditionFormula>IF(
NOT( Contract__r.Contract_Active__c ),
TRUE,
FALSE
)</errorConditionFormula>
    <errorMessage>One cannot create or edit Contract Job Assignment for an Inactive Contract</errorMessage>
</ValidationRule>