force-app/main/default/objects/Contract_Assignment__c/validationRules/Restrict_Active_Contract_Assignment_Camp.validationRule-meta.xml
<ValidationRule>
    <fullName>Restrict_Active_Contract_Assignment_Camp</fullName>
    <active>true</active>
    <errorConditionFormula>IF( 
AND(ISNEW(),Active__c,Contract__r.Active_Contract_Asg_Camp__c = 1,CONTAINS(Unit_Type__c,&quot;Camp&quot;)), 
true, 
IF( 
AND(PRIORVALUE(Active__c ) = false,Active__c = true,Contract__r.Active_Contract_Asg_Camp__c = 1,CONTAINS(Unit_Type__c,&quot;Camp&quot;)), 
true, 
false 
) 
)</errorConditionFormula>
    <errorMessage>For a Contract, at a time only one contract assignment of type Camp can be active.</errorMessage>
</ValidationRule>