force-app/main/default/objects/Contract_Assignment__c/listViews/Camps.listView-meta.xml
<ListView>
    <fullName>Camps</fullName>
    <columns>NAME</columns>
    <columns>Contract__c</columns>
    <columns>Client_Name__c</columns>
    <columns>Unit__c</columns>
    <columns>Active__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Unit_Name__c</field>
        <operation>contains</operation>
        <value>Camp</value>
    </filters>
    <label>Camps</label>
</ListView>